--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
     <footer class="footer">
         <div class="containerrr">
-            <p>&copy; 2024 <a href="https://www.instagram.com/zoneoftech.com.br/" style="text-decoration: none; color: aqua;">Zone Of Tech</a>. Todos os direitos reservados.</p>
+            <p>&copy; 2024 <a href="https://www.instagram.com/zoneoftech.com.br/" style="text-decoration: none; color: aqua;">ZONE OF TECH</a>. TODOS OS DIREITOS RESERVADOS.</p>
         </div>
     </footer>
     
