--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <div class="nav-menu">
                     <ul>
                         <li><a class="active" href="#inicio">HOME</a></li>
-                        <li><a href="#">QUEM SOMOS</a></li>
-                        <li><a href="#">SERVIÇOS OFERECIDOS</a></li>
-                        <li><a href="#">FALE CONOSCO</a></li>
-                        <li><a href="#">LOCALIZAÇÃO</a></li>
+                        <li><a href="#quem-somos">QUEM SOMOS</a></li>
+                        <li><a href="#servicos">SERVIÇOS OFERECIDOS</a></li>
+                        <li><a href="#contato">FALE CONOSCO</a></li>
+                        <li><a href="https://www.google.com/maps/place/R.+Vig.+J.+J.+Rodrigues,+21+-+Vila+Arens,+Jundia%C3%AD+-+SP,+13201-001/@-23.19649,-46.8771663,17z/data=!3m1!4b1!4m6!3m5!1s0x94cf2781930d3ae1:0x21c7284ad92b2610!8m2!3d-23.19649!4d-46.8771663!16s%2Fg%2F11jcnwlwlv?entry=ttu&g_ep=EgoyMDI0MTAwMi4xIKXMDSoASAFQAw%3D%3D" target="_blank">LOCALIZAÇÃO</a></li>
                     </ul>
                 </div>
             </nav>
@@ -38,7 +38,7 @@
             <div class="apresentacao">
                 <h2>CONHECIMENTO JURIDICO E COMPROMISSO NA DEFESA DE SEUS DIREITOS</h2>
                 <hr>
-                <h4>Localizado em Refife, o T.Martins tem a missão de buscar soluções juridicas eficazes e justas. Seja qual for seu desafio legal estamos aqui pra fornecer o suporte e a orientação necessárias para alcançar o melhor resultado</h4>
+                <h4>Localizado em Jundiai, o T.Martins tem a missão de buscar soluções juridicas eficazes e justas. Seja qual for seu desafio legal estamos aqui pra fornecer o suporte e a orientação necessárias para alcançar o melhor resultado</h4>
                 <a href="#contato" class="botao">FALE COMIGO AGORA MESMO</a>
             </div>
         </div>
@@ -164,7 +164,7 @@
             <h1>Em busca de uma Advogada em Jundiaí e Região?</h1>
             <hr>
             <p>Buscando constantemente o aperfeiçoamento profissional para oferecer um atendimento qualificado, encontrando soluções estratégicas para os conflitos jurídicos.</p>
-            <a href="#" class="botao">FALE COMIGO AGORA MESMO</a>
+            <a href="#contato" class="botao">FALE COMIGO AGORA MESMO</a>
         </div>
     </section>
 
